# event-driven-svcs

./: .clinerules  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CONTRIBUTING.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-docs.yml  main.yml  on-release-main.yml
blog/: index.html
blog/2025/03/23/welcome-to-my-blog--a-journey-into-event-driven-microservices/: index.html
blog/2025/03/24/oauth-flow-gui-backend-api-and-authservice/: index.html
blog/2025/03/26/how-to-build-this-product/: index.html
blog/archive/2025/: index.html
blog/category/codebase/: index.html
blog/category/python/: index.html
blog/category/uml/: index.html
docs/: index.md  modules.md
docs/blog/: .authors.yml
docs/blog/posts/: .meta.yml  auth-flow.md  blog-officially-open.md  project-commands-pymonorepo.md  project-commands.md
overrides/: blog-post.html
overrides/partials/: blog-comments.html  comments.html
search/: search_index.json
site/: 404.html  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
site/assets/: _mkdocstrings.css
site/assets/javascripts/lunr/: wordcut.js
site/assets/stylesheets/: main.4af4bdda.min.css
site/blog/: index.html
site/blog/2025/03/23/welcome-to-my-blog--a-journey-into-event-driven-microservices/: index.html
site/blog/2025/03/24/oauth-flow-gui-backend-api-and-authservice/: index.html
site/blog/2025/03/26/how-to-build-this-product/: index.html
site/blog/archive/2025/: index.html
site/blog/category/monorepos/: index.html
site/blog/category/news/: index.html
site/blog/category/uml/: index.html
site/modules/: index.html
site/search/: search_index.json
tests/: test_foo.py
